--- a/js.Ias.csproj
+++ b/js.Ias.csproj
@@ -128,6 +128,7 @@
     <Content Include="Styles\Web.config">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="README.md" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
